t-koma-knowledge/tests/snapshots/reference_topic_e2e__dioxus_reference_search_rsx_syntax.snap
---
source: t-koma-knowledge/tests/reference_topic_e2e.rs
expression: "build_search_snapshot(question, &search_result.results, 3)"
---
query: RSX syntax JSX-like markup rendering elements
total_hits: 8
unique_files: 7
top_results:
  - rank: 1
    title: docs-src/0.6/src/guide/rsx.md
    note_type: ReferenceDocs
    snippet_preview: "Dioxus provides the `rsx! {}` macro for assembling `Element`s in your app. The `rsx! {}` macro primarily speaks HTML: the web, desktop, and mobile Dio"
  - rank: 2
    title: dioxuslabs-com-learn-0-6.md
    note_type: ReferenceDocs
    snippet_preview: "The Dioxus syntax is similar to React's JSX markup, borrowing React's component\nand hooks approach. All components are Rust functions that take `Prope"
  - rank: 3
    title: examples/09-reference/rsx_usage.rs
    note_type: ReferenceCode
    snippet_preview: "fn app() -> Element {\n    let formatting = \"formatting!\";\n    let formatting_tuple = (\"a\", \"b\");\n    let lazy_fmt = format_args!(\"lazily formatted tex"
