t-koma-knowledge/tests/snapshots/reference_topic_e2e__dioxus_reference_search_state_management.snap
---
source: t-koma-knowledge/tests/reference_topic_e2e.rs
expression: "build_search_snapshot(question, &search_result.results, 3)"
---
query: state management use_signal reactive hooks
total_hits: 8
unique_files: 7
top_results:
  - rank: 1
    title: docs-src/0.6/src/guide/state.md
    note_type: ReferenceDocs
    snippet_preview: "While `use_hook` makes it possible to store any value that implements `Clone`, you'll frequently want a more capable form of state management. Built-i"
  - rank: 2
    title: docs-src/0.6/src/guide/state.md
    note_type: ReferenceDocs
    snippet_preview: "While hooks are good for state *local* to components, occasionally you'll want to manage state for your *entire* app.\n\nDioxus provides two mechanisms:"
  - rank: 3
    title: examples/06-routing/hash_fragment_state.rs
    note_type: ReferenceCode
    snippet_preview: "fn Home(url_hash: ReadSignal<State>) -> Element {\n    // The initial state of the state comes from the url hash\n    let mut state = use_signal(&*url_h"
