t-koma-knowledge/tests/snapshots/reference_topic_e2e__dioxus_topic_list_and_recent.snap
---
source: t-koma-knowledge/tests/reference_topic_e2e.rs
expression: "serde_json::json!({\n    \"topic_list\":\n    {\n        \"count\": list.len(), \"title\": &list[0].title, \"status\":\n        &list[0].status, \"is_stale\": list[0].is_stale, \"file_count\":\n        list[0].file_count, \"source_count\": list[0].source_count, \"tags\":\n        &list[0].tags,\n    }, \"recent_topics\":\n    {\n        \"count\": recent.len(), \"title\": &recent[0].1, \"tag_count\":\n        recent[0].2.len(),\n    }, \"topic_create_stats\":\n    {\n        \"source_count\": f.source_count, \"file_count\": f.file_count,\n        \"chunk_count\": f.chunk_count,\n    },\n})"
---
recent_topics:
  count: 1
  tag_count: 4
  title: Dioxus - Rust UI Framework
topic_create_stats:
  chunk_count: 748
  file_count: 215
  source_count: 3
topic_list:
  count: 1
  file_count: 215
  is_stale: false
  source_count: 3
  status: active
  tags:
    - dioxus
    - framework
    - rust
    - ui
  title: Dioxus - Rust UI Framework
